--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "history": "^4.7.2"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
