--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "template"
   ],
   "dependencies": {
-    "antd": "^4.6.3",
     "@ant-design/icons": "^4.0.2",
+    "antd": "^4.6.3",
     "axios": "^0.19.2",
     "history": "^4.7.2",
     "mobx": "^4.4.1",
@@ -36,6 +36,9 @@
     "react-hot-loader": "^4.13.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-treeview-semantic": "^1.0.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "webpack-dev-server": "^3.11.0",
     "yaml": "^1.10.0"
   },
