--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "comments": "before start dist resources, confirm you have dll static library!",
   "scripts": {
-    "dll": "webpack --config webpack.dll.config.js",
     "start": "cross-env NODE_ENV=development webpack serve",
-    "dist": "webpack --config webpack.prod.config.js"
+    "rimraf": "rimraf ./dist -rf",
+    "dll": "webpack --config webpack.dll.config.js",
+    "dist": "webpack --config webpack.prod.config.js",
+    "build": "npm run rimraf; npm run dll; npm run dist;"
   },
   "keywords": [
     "react",
@@ -67,10 +69,12 @@
     "event-stream": "^4.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "happypack": "^5.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.3",
     "less-loader": "^6.1.3",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.9",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
