--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-stage-2": "^7.8.3",
     "babel-loader": "^8.2.1",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
@@ -68,7 +69,7 @@
     "eslint-plugin-react": "^7.11.1",
     "event-stream": "^4.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^1.1.11",
     "happypack": "^5.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -77,7 +78,7 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.9",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.1.2",
+    "url-loader": "^1.0.1",
     "webpack": "^4.19.0",
     "webpack-cli": "^4.2.0"
   }
